<resources>
    <string name="app_name">Task Siren</string>
    <string name="task_siren">Task Siren</string>
    <string name="login_via">Login via</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_acc">Don\'t have acount.</string>
    <string name="register_u"><u>Register</u></string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="types">Types</string>
    <string name="name">Name</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title">Title</string>

    <string name="sort_by_name">Sort by name</string>
    <string name="today_task">Tasks</string>
    <string name="add_task">Add task</string>
    <string name="add_quick_list">Add list of tasks</string>
    <string name="add_type">Add type</string>

    <string name="task_details">Task details</string>
    <string name="title_">Title:</string>
    <string name="task">Task</string>
    <string name="type_">Type:</string>
    <string name="type">Type</string>
    <string name="sub_tasks_">SubTasks:</string>
    <string name="sub_tasks">SubTasks</string>
    <string name="phone_">Phone:</string>
    <string name="phone">Phone</string>
    <string name="media_">Media:</string>
    <string name="media">Media</string>
    <string name="location_">Location:</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="time_">Time:</string>
    <string name="date">Date</string>
    <string name="date_">Date:</string>
    <string name="priority">Priority</string>
    <string name="priority_">Priority:</string>
    <string name="note_">Note:</string>
    <string name="note">Note</string>

    <string name="call">Call</string>
    <string name="visit">Visit</string>
    <string name="unspecified">UnSpecified</string>
    <string name="media_hint">(Image - Audio_ Location - Phone number - ...)</string>
    <string name="empty_">Empty!</string>

    <string name="cancel">Cancel</string>
    <string name="color">Color</string>
    <string name="ok">OK</string>
    <string name="add_all">Add All</string>
    <string name="confirm">Confirm</string>
    <string name="add_more"><u>Add more</u></string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="account"><u>Account</u></string>
    <string name="change_name">Change name</string>
    <string name="change_password">Change password</string>
    <string name="change_avatar">Change avatar</string>
    <string name="application"><u>Application</u></string>
    <string name="reminder_">Reminder:</string>
    <string name="never">Never</string>
    <string name="alarm_">Alarm:</string>
    <string name="snooze_">Snooze:</string>
    <string name="min_15">15 Min</string>
    <string name="highlight_delayed">Highlight delayed with</string>
    <string name="red"><u>Red</u></string>
    <string name="short_pw">Short password</string>
    <string name="auth_failed">Failed to login</string>
    <string name="unmatch_pw">Passwords not matched</string>
    <string name="camera">Open camera</string>
    <string name="gallery">Open gallery</string>
    <string name="set_photo">Set photo</string>
    <string name="permission_denied">Can\'t access Gallery or Photos</string>
    <string name="meeting">Meeting</string>
    <string name="study">Study</string>

    <string name="error_no_type_added">No type added!!</string>

    <string name="no_tasks_added">No tasks!!</string>

</resources>
